--- a/src/HuggleLite/mainwindow.ui
+++ b/src/HuggleLite/mainwindow.ui
@@ -23,7 +23,7 @@
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
-        <height>518</height>
+        <height>255</height>
        </size>
       </property>
      </spacer>
@@ -46,6 +46,13 @@
       </item>
      </layout>
     </item>
+    <item>
+     <widget class="QPlainTextEdit" name="systemLog">
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -57,7 +64,22 @@
      <height>19</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuDebug_menu">
+    <property name="title">
+     <string>Menu</string>
+    </property>
+    <addaction name="actionSystem_log"/>
+   </widget>
+   <addaction name="menuDebug_menu"/>
   </widget>
+  <action name="actionSystem_log">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>System log</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
