--- a/src/HuggleLite/text.qrc
+++ b/src/HuggleLite/text.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/huggle/text">
         <file>Resources/test_diff.htm</file>
+        <file>Localization/en.xml</file>
     </qresource>
 </RCC>
